# lg

./: .gitignore
lg-b/: pyproject.toml
lg-b/lg/: manage.py
lg-b/lg/lg/: asgi.py  settings.py  urls.py  wsgi.py
lg-b/lg/pl/: models.py  urls.py  views.py
lg-b/lg/pl/migrations/: 0001_initial.py
lg-b/lg/pl/templates/pl/: about.html  base.html  index.html
