[tool.poetry]
name = "lg-b"
version = "0.1.0"
description = ""
authors = ["Andrey Vorontsov <reygofor@gmail.com>"]
readme = "README.md"
packages = [{include = "lg_b"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2"
pillow = "^9.5.0"


[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.0"
djlint = "^1.25.0"

[tool.djlint]
format_attribute_template_tags=true
blank_line_after_tag = "load,extends,include"
blank_line_before_tag = "load,extends,include"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
